Updates from ShareLaTeX

--- a/abstract.tex
+++ b/abstract.tex
@@ -2,7 +2,7 @@
 
 %While multiple scheduling and queue management algorithms have been proposed in the past, very few have been implemented in today's routers and even fewer have enabled by, and used effectively, by the public network operators. 
 %The Internet has been unable to enjoy the benefits of scheduling policies, due to two primary reasons: (i) network operators are unable to choose appropriate policies due to lack of visibility into individual customer’s traffic, and (ii) customers are unable to enforce their desired policies due to lack of control over queue-up links in the middle of the network. 
-Internet content providers (or customers) can benefit from applying different scheduling and queue management policies to their traffic. However, they currently lack control of the queued-up bottleneck links in the network to effectively enforce desired policies. As a step towards addressing this issue, we propose a new kind of middlebox, called a \name, which brings the queues in the network under the customer's control. \name sits at the edge of a sender's domain, and bundles together groups of flows that have common destination domain. It does rate control for each bundle, such that the queuing induced by its traffic is moved from the middle of the network to the \name itself. This allows the sender to unilaterally enforce its desired scheduling policy across the bundled traffic. \name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code. Our evaluation, on a variety of emulated scenarios, shows that scheduling via \name can result in up to \an{double check for more recent numbers: 62\%} improvement in median flow completion time compared to the status quo.
+Internet content providers (or customers) can benefit from applying different scheduling and queue management policies to their traffic. However, they currently lack control over the queues that build up at the bottleneck links in the network to effectively enforce desired policies. As a step towards addressing this issue, we propose a new kind of middlebox, called a \name, which brings the queues in the network under the customer's control. \name sits at the edge of a sender's domain, and bundles together groups of flows that have common destination domain. It does rate control for each bundle, such that the queuing induced by its traffic is moved from the middle of the network to the \name itself. This allows the sender to unilaterally enforce its desired scheduling policy across the bundled traffic. \name has an immediately deployable, light-weight design, which we implement in only $\sim1500$ lines of code. Our evaluation, on a variety of emulated scenarios, shows that scheduling via \name can result in up to \an{double check for more recent numbers: 62\%} improvement in median flow completion time compared to the status quo.
 
 %It does 
 %This works by shifting the network bottleneck from the middle of the network, where it is difficult to enforce policies, to the edge (\ie the \name), where it is easy to do so.
